--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,12 +1,30 @@
+upstream demo {
+    server web:8000;
+}
+
 server {
     listen 80;
-    # listen [::]:80;
-    server_name ns.main.com;
-    # server_name localhost;
 
     location / {
-        root /usr/share/nginx/html/main;
-        index index.html index.htm;
+        proxy_pass http://demo;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
     }
 
+    location /static/ {
+        alias /home/app/staticfiles/;
+    }
 }
+
+# server {
+#     listen 80;
+#     # listen [::]:80;
+#     server_name ns.main.com;
+#     # server_name localhost;
+
+#     location / {
+#         root /usr/share/nginx/html/main;
+#         index index.html index.htm;
+#     }
+
+# }
