--- a/.env-example/dev.env
+++ b/.env-example/dev.env
@@ -1,3 +1,9 @@
 DEBUG=1
 SECRET_KEY=
 ALLOWED_HOSTS=host1 host2
+
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=db-dev
+POSTGRES_PORT=
