--- a/.env-example/prod.env
+++ b/.env-example/prod.env
@@ -1,3 +1,9 @@
 DEBUG=0
 SECRET_KEY=
 ALLOWED_HOSTS=host1 host2
+
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=db-prod
+POSTGRES_PORT=
