--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -13,6 +13,8 @@ services:
       - ./.env/prod.env
     environment:
       - DJANGO_ENV=production
+    depends_on:
+      - db-prod
   nginx:
     build:
       context: ./nginx/
@@ -23,6 +25,18 @@ services:
       - static_files:/home/app/staticfiles
     depends_on:
       - web
+
+  db-prod:
+    image: postgres:13
+    env_file:
+      - ./.env/prod.env
+    volumes:
+      - postgres_data_prod:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   # dns:
   #   build:
@@ -38,3 +52,4 @@ services:
 
 volumes:
   static_files:
+  postgres_data_prod:
