--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,20 @@ services:
       - ./.env/dev.env
     environment:
       - DJANGO_ENV=development
+    depends_on:
+      db-dev:
+        condition: service_healthy
+  db-dev:
+    image: postgres:13
+    env_file:
+      - ./.env/dev.env
+    volumes:
+      - postgres_data_dev:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data_dev:
