--- a/django-app/pyproject.toml
+++ b/django-app/pyproject.toml
@@ -11,4 +11,5 @@ dependencies = [
     "gunicorn>=23.0.0",
     "psycopg2-binary>=2.9.10",
     "rav>=0.0.9",
+    "djangorestframework-simplejwt>=5.3.1",
 ]
